# cigniter

./: .gitmodules  README.md  build.gradle  gradle.properties
app/: build.gradle
app/src/libs/: README.md
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jni-helper.cpp
app/src/main/java/io/github/trojan_gfw/igniter/: TrojanService.java
app/src/main/res/raw/: clash.yaml
app/src/main/res/values/: strings.xml
